; ModuleID = '/home/carl/AnghaBench/git/extr_transport-helper.c_release_helper.c'
source_filename = "/home/carl/AnghaBench/git/extr_transport-helper.c_release_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transport = type { %struct.helper_data* }
%struct.helper_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.transport*)* @release_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @release_helper(%struct.transport* %0) #0 {
  %2 = alloca %struct.transport*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.helper_data*, align 8
  store %struct.transport* %0, %struct.transport** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load %struct.transport*, %struct.transport** %2, align 8
  %6 = getelementptr inbounds %struct.transport, %struct.transport* %5, i32 0, i32 0
  %7 = load %struct.helper_data*, %struct.helper_data** %6, align 8
  store %struct.helper_data* %7, %struct.helper_data** %4, align 8
  %8 = load %struct.helper_data*, %struct.helper_data** %4, align 8
  %9 = getelementptr inbounds %struct.helper_data, %struct.helper_data* %8, i32 0, i32 0
  %10 = call i32 @refspec_clear(i32* %9)
  %11 = load %struct.transport*, %struct.transport** %2, align 8
  %12 = call i32 @disconnect_helper(%struct.transport* %11)
  store i32 %12, i32* %3, align 4
  %13 = load %struct.transport*, %struct.transport** %2, align 8
  %14 = getelementptr inbounds %struct.transport, %struct.transport* %13, i32 0, i32 0
  %15 = load %struct.helper_data*, %struct.helper_data** %14, align 8
  %16 = call i32 @free(%struct.helper_data* %15)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @refspec_clear(i32*) #1

declare dso_local i32 @disconnect_helper(%struct.transport*) #1

declare dso_local i32 @free(%struct.helper_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
